# CCInterview

./: .gitignore  pyproject.toml
src/simulador_entrevistas/: main.py
src/simulador_entrevistas/auth/: auth.py  dependencies.py
src/simulador_entrevistas/db/: mongo.py
src/simulador_entrevistas/models/: user.py
src/simulador_entrevistas/routes/: adaptabilidad_routes.py  auth_routes.py  config_routes.py  cv_routes.py  entrevista_routes.py  feedback_routes.py
src/simulador_entrevistas/services/: compilator.py  embeddings.py  llm.py  transcripcion.py
src/simulador_entrevistas/static/: style.css
src/simulador_entrevistas/static/css/: estilos.css
src/simulador_entrevistas/templates/: index.html
src/simulador_entrevistas/templates/adaptabilidad/: codigo.html  escoger.html  probar.html
src/simulador_entrevistas/templates/auth/: correo_enviado.html  login.html  nueva_password.html  recuperar.html  reenviar_verificacion.html  register.html  verificacion_correcta.html  verificar.html
src/simulador_entrevistas/templates/config/: admin.html  criterios_adaptacion.html  duracion.html  plantillas_judge.html
src/simulador_entrevistas/templates/cv/: _navbar.html  confirmacion_cv.html  create.html  index.html  mensaje.html  mensaje2.html  mensaje3.html  mensaje4.html
src/simulador_entrevistas/templates/entrevista/: _navbar.html  base.html  nueva.html  preguntas.html
src/simulador_entrevistas/templates/feedback/: _navbar.html  dashboard.html  (+5 more)
src/simulador_entrevistas/utils/: adaptabilidad.py  audio.py  codigo.py  email.py  perfil_usuario.py  preguntas.py
